--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,18 @@
-theme: jekyll-theme-cayman
-encoding: UTF-8 with BOM
+# Setup
+title:        Project or Site name
+tagline:      A responsive theme for your project on GitHub Pages
+baseurl:      ""
+paginate:     1
+locale:       "en"
+
+# About/contact
+author:
+  name:       MarkChen
+  url:        http://yourhomepage.com 
+
+# Gems
+gems:
+  - jekyll-paginate
+
+#Others
+markdown: kramdown
